--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.15",
     "sequelize": "^6.18.0"
   },
